--- a/src/Resources/views/Profile/Blocks/objects.html.twig
+++ b/src/Resources/views/Profile/Blocks/objects.html.twig
@@ -23,7 +23,7 @@
                                 <th>Name</th>
                                 <th>Actions</th>
                             </tr>
-                        </head>                        
+                        </thead>
                         <tbody>
                             {% for type, object in objects %}
                             <tr>
