--- a/src/Resources/views/Profile/show.html.twig
+++ b/src/Resources/views/Profile/show.html.twig
@@ -45,9 +45,9 @@ file that was distributed with this source code.
                             <thead>
                                 <tr class="sonata-ba-list-field-header">
                                     <th class="sonata-ba-list-field-header">Id</th>
-                                    <th class="sonata-ba-list-field-header" width="150px">Tags</th>
+                                    <th class="sonata-ba-list-field-header" style="width:200px;" >Tags</th>
                                     <th class="sonata-ba-list-field-header">Type</th>
-                                    <th class="sonata-ba-list-field-header" width="150px">Name</th>
+                                    <th class="sonata-ba-list-field-header" style="width:200px;">Name</th>
                                     <th class="sonata-ba-list-field-header">Metadata</th>
                                     <th class="sonata-ba-list-field-header">Description</th>
                                 </tr>
