FIX: Docker Images

--- a/src/Resources/views/Objects/list.html.twig
+++ b/src/Resources/views/Objects/list.html.twig
@@ -13,6 +13,8 @@
 
 #}
 
+{% set base_template = "@SonataAdmin/standard_layout.html.twig" %}
+
 {% extends "@SonataAdmin/CRUD/base_list.html.twig" %}
 {% import   "@SplashAdmin/Macros/fields.html.twig"   as  Fields %}
 
