--- a/src/Resources/views/Forms/burgov.html.twig
+++ b/src/Resources/views/Forms/burgov.html.twig
@@ -1,4 +1,4 @@
-{% extends 'SonataAdminBundle:Form:form_admin_fields.html.twig' %}
+{% extends '@SonataAdmin/Form/form_admin_fields.html.twig' %}
 
 {% block burgov_key_value_widget %}
     {{- block('sonata_type_native_collection_widget') -}}
