--- a/src/Resources/views/Components/Server/tests_results.html.twig
+++ b/src/Resources/views/Components/Server/tests_results.html.twig
@@ -22,7 +22,7 @@
                     </div>
                     
                     <span class="progress-description">
-                        {{ log | raw }}
+                        {{ logs | raw }}
                     </span>
                     
                 </div>
