--- a/src/Resources/views/Config/list.html.twig
+++ b/src/Resources/views/Config/list.html.twig
@@ -34,7 +34,7 @@ file that was distributed with this source code.
 
 {% block list_filters %}
 
-    {% include "@SplashAdmin/Core/logs.html.twig" %}
+    <twig:SplashAdmin:Server:Logs />
 
     <div class="col-xs-12 col-md-6">
         {% include "@SplashAdmin/Config/Blocks/profile.html.twig" %}
