--- a/src/Resources/views/Objects/list.html.twig
+++ b/src/Resources/views/Objects/list.html.twig
@@ -35,7 +35,7 @@
 
 {% block list_table %}
 
-    {% include "@SplashAdmin/Core/logs.html.twig" %}
+    <twig:SplashAdmin:Server:Logs />
 
     {{ parent() }}
         
