--- a/src/Resources/views/Objects/show.html.twig
+++ b/src/Resources/views/Objects/show.html.twig
@@ -37,7 +37,7 @@
 
 {% block show %}
 
-    {% include "@SplashAdmin/Core/logs.html.twig" %}
+    <twig:SplashAdmin:Server:Logs />
     
     <section class="content">
         <div class="row">
