--- a/src/Resources/views/CRUD/show_object.html.twig
+++ b/src/Resources/views/CRUD/show_object.html.twig
@@ -1,6 +1,6 @@
 {% extends '@SonataAdmin/CRUD/base_show.html.twig' %}
 
 {% block notice %}
-    {% include "@SplashAdmin/Core/logs.html.twig" %}
+    <twig:SplashAdmin:Server:Logs />
     {{ parent() }}
 {% endblock %}
