--- a/src/Resources/views/Components/Server/informations.html.twig
+++ b/src/Resources/views/Components/Server/informations.html.twig
@@ -1,16 +1,14 @@
 
 <div class="box box-primary">
     <div class="box-body ">
-        <div class="info-box">
+        <div class="info-box no-margin">
 
             <span class="info-box-icon bg-default">
-                {% if infos.logourl | default(false) is not empty %}
-                <img src="{{ infos.logourl }}" class="img-responsive">                            
-                {% elseif infos.logoraw | default(false) is not empty %}
-                <img src="data:image/gif;base64,{{ infos.logoraw }}" class="img-responsive">                            
-                {% else %}
-                <img src="{{ asset('bundles/splash/splash-ico.png') }}" class="img-responsive">                            
-                {% endif %}
+                <img
+                        src="{{ this.logoSrc|default(asset('bundles/splash/splash-ico.png')) }}"
+                        class="img-responsive"
+                        alt="Connector Logo"
+                >
             </span>
 
             <div class="info-box-content">
@@ -18,10 +16,12 @@
                 <span class="info-box-text">Connection Informations</span>
 
                 <div class="progress">
-                    <div class="progress-bar" style="width: 0%"></div>
+                    <div class="progress-bar" style="width: 0"></div>
                 </div>
-                <span class="progress-description">
-                    <table class="table table-bordered table-striped table-hover sonata-ba-list">
+
+                <div class="progress-description">
+
+                    <table class="table table-bordered table-striped table-hover sonata-ba-list no-margin">
                         <tbody>
                             <tr>
                                 <td>Short Description</td>
@@ -69,7 +69,7 @@
                             </tr>
                         </tbody>
                     </table>
-                </span>
+                </div>
             </div><!-- /.info-box-content -->
         </div>
     </div>
