--- a/src/Resources/views/Components/Server/profile.html.twig
+++ b/src/Resources/views/Components/Server/profile.html.twig
@@ -1,10 +1,13 @@
 
 <div class="box box-primary">
     <div class="box-body ">
-        <div class="info-box">
+        <div class="info-box no-margin">
 
             <span class="info-box-icon bg-default">
-                <img src="{{ asset(profile.ico | default('bundles/splash/splash-ico.png')) }}" class="img-responsive">                            
+                <img
+                        src="{{ asset(profile.ico | default('bundles/splash/splash-ico.png')) }}"
+                        class="img-responsive"
+                >
             </span>
 
             <div class="info-box-content">
@@ -14,11 +17,12 @@
                 </span>
 
                 <div class="progress">
-                    <div class="progress-bar" style="width: 0%"></div>
+                    <div class="progress-bar" style="width: 0"></div>
                 </div>
-                <span class="progress-description">
 
-                    <table class="table table-bordered table-striped table-hover sonata-ba-list">
+                <div class="progress-description">
+
+                    <table class="table table-bordered table-striped table-hover sonata-ba-list no-margin">
                         <tbody>
                             <tr>
                                 <td>Title</td>
@@ -58,50 +62,9 @@
                         </tbody>
                     </table>                                
 
-                </span>
-            </div><!-- /.info-box-content -->
-        </div>
-                                
-        <div class="info-box">
-
-            <span class="info-box-icon bg-orange-active">
-                <i class="fa fa-cogs text-default" aria-hidden="true"></i>                          
-            </span>
-
-            <div class="info-box-content">
-
-                <span class="info-box-text">
-                    WebService Configuration
-                </span>
-
-                <div class="progress">
-                    <div class="progress-bar" style="width: 0%"></div>
                 </div>
-                <span class="progress-description">
+            </div>
+        </div>
 
-                    <table class="table table-bordered table-striped table-hover sonata-ba-list">
-                        <tbody>
-                            <tr>
-                                <td>Id</td>
-                                <td>{{ config.WsIdentifier | default('?') }}</td>
-                            </tr>
-                            <tr>
-                                <td>Key</td>
-                                <td>{{ config.WsEncryptionKey | default('?') }}</td>
-                            </tr>
-                            <tr>
-                                <td>Host</td>
-                                <td>{{ config.WsHost | default('?') }}</td>
-                            </tr>
-                            <tr>
-                                <td>Method</td>
-                                <td>{{ config.WsMethod | default('?') }}</td>
-                            </tr>
-                        </tbody>
-                    </table>                                
-
-                </span>
-            </div><!-- /.info-box-content -->
-        </div>                                
     </div>
 </div>
