--- a/src/Resources/views/Objects/empty.html.twig
+++ b/src/Resources/views/Objects/empty.html.twig
@@ -33,7 +33,7 @@
 
 {% block list_table %}
 
-    {% include "@SplashAdmin/Core/logs.html.twig" %}    
+    <twig:SplashAdmin:Server:Logs />
         
 {% endblock %}
 
