--- a/src/Resources/views/Profile/list.html.twig
+++ b/src/Resources/views/Profile/list.html.twig
@@ -36,36 +36,19 @@ file that was distributed with this source code.
     
     <div class="col-xs-12 col-md-6">
         
-        {% include "@SplashAdmin/Profile/Blocks/idcard.html.twig" %}
-        
-        {% include "@SplashAdmin/Profile/Blocks/infos.html.twig" %}
-        
+        <twig:SplashAdmin:Server:Profile    :connector="connector" />
+        <twig:SplashAdmin:Server:Config     :connector="connector" />
+        <twig:SplashAdmin:Server:Infos      :connector="connector" />
+        <twig:SplashAdmin:Server:Logs />
+
     </div>
     
     <div class="col-xs-12 col-md-6">
-        
-        {% include "@SplashAdmin/Profile/Blocks/objects.html.twig" %}
-                
-        {% include "@SplashAdmin/Profile/Blocks/test.html.twig" with { 
-                "result"    : results.selftest,
-                "title"     : 'Self-Test of Connector',
-                "log"       : selftest
-        } %}
 
-        {% include "@SplashAdmin/Profile/Blocks/test.html.twig" with { 
-                "result"    : results.ping,
-                "title"     : 'Ping from Connector',
-                "log"       : ping
-        } %}
-
-        {% include "@SplashAdmin/Profile/Blocks/test.html.twig" with { 
-                "result"    : results.connect,
-                "title"     : 'Connect from Connector',
-                "log"       : connect
-        } %}
-        
+        <twig:SplashAdmin:Objects:List      :connector="connector" />
+        <twig:SplashAdmin:Server:SelfTests  :connector="connector" />
+        <twig:SplashAdmin:Server:Ping       :connector="connector" />
+        <twig:SplashAdmin:Server:Connect    :connector="connector" />
     </div>
-
-    
     
 {% endblock %}
