--- a/src/Resources/views/Profile/show.html.twig
+++ b/src/Resources/views/Profile/show.html.twig
@@ -33,8 +33,8 @@ file that was distributed with this source code.
 
 {% block show %}
 
-    {% include "@SplashAdmin/Core/logs.html.twig" %}
-    
+    <twig:SplashAdmin:Server:Logs />
+
     <section class="content">
         <div class="row">
             <div class="col-xs-12 col-md-12">
